gcc/testsuite/gdc.test/compilable/dtoh_CPPNamespaceDeclaration.d
/*
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler

#pragma once

#include <assert.h>
#include <math.h>
#include <stddef.h>
#include <stdint.h>

namespace nameSpace
{
    extern void fn();

    namespace nameSpace2
    {
        extern void fn2();

    }
    extern double identity(double __param_0_);

}
---
*/

extern(C++, "nameSpace")
{
    void fn() {}

    extern(C++, nameSpace2)
    {
        void fn2() {}
    }

    double identity(double) { return __param_0; }
}
